Ajustado os endpoints de commits, healthcheck e também swagger e tratamento de erros.
